codeToPyParser.py
# Generated from codeToPy.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class codeToPyParser ( Parser ):

    grammarFileName = "codeToPy.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'hacer'", "'definir'", "'devolver'", 
                     "'mostrar'", "'--'", "'*'", "'+'", "'%'", "'/'", "'-'", 
                     "'^'", "'raiz'", "'('", "')'", "':'", "','", "'si'", 
                     "'sino'", "'repetir'", "'veces'", "'<'", "'>'", "'=='", 
                     "'!='", "'<='", "'>='", "'y'", "'o'", "'='", "';'", 
                     "'{'", "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "HACER", "DEFINIR", "DEVOLVER", "MOSTRAR", 
                      "SEPARADOR", "MUL", "PLUS", "MOD", "DIVIDE", "SUB", 
                      "EXPONENT", "SQRT", "LPAREN", "RPAREN", "COLON", "COMMA", 
                      "SI", "SINO", "REPETIR", "VEZ", "MENORQUE", "MAYORQUE", 
                      "IGUALQUE", "DISTINTOQUE", "MENORIGUAL", "MAYORIGUAL", 
                      "Y", "O", "IGUAL", "SEMICOLON", "LBRACE", "RBRACE", 
                      "LBRACKET", "RBRACKET", "BOOLEAN", "ID", "STRING", 
                      "NUMERO", "FLOAT", "WS", "COMMENT_SINGLE", "COMMENT_MULTI" ]

    RULE_inicio = 0
    RULE_declaracionFuncion = 1
    RULE_parametros = 2
    RULE_bloque = 3
    RULE_instruccion = 4
    RULE_ciclo = 5
    RULE_mostrar = 6
    RULE_cadenaConcatenada = 7
    RULE_condicion = 8
    RULE_declaracionVariable = 9
    RULE_accesoIndice = 10
    RULE_expresion = 11
    RULE_expAritmetica = 12
    RULE_expTermino = 13
    RULE_expFactor = 14
    RULE_expPotencia = 15
    RULE_expRaiz = 16
    RULE_condicionLogica = 17
    RULE_termino = 18
    RULE_comparacion = 19
    RULE_llamadaFuncion = 20
    RULE_argumento = 21
    RULE_lista = 22

    ruleNames =  [ "inicio", "declaracionFuncion", "parametros", "bloque", 
                   "instruccion", "ciclo", "mostrar", "cadenaConcatenada", 
                   "condicion", "declaracionVariable", "accesoIndice", "expresion", 
                   "expAritmetica", "expTermino", "expFactor", "expPotencia", 
                   "expRaiz", "condicionLogica", "termino", "comparacion", 
                   "llamadaFuncion", "argumento", "lista" ]

    EOF = Token.EOF
    HACER=1
    DEFINIR=2
    DEVOLVER=3
    MOSTRAR=4
    SEPARADOR=5
    MUL=6
    PLUS=7
    MOD=8
    DIVIDE=9
    SUB=10
    EXPONENT=11
    SQRT=12
    LPAREN=13
    RPAREN=14
    COLON=15
    COMMA=16
    SI=17
    SINO=18
    REPETIR=19
    VEZ=20
    MENORQUE=21
    MAYORQUE=22
    IGUALQUE=23
    DISTINTOQUE=24
    MENORIGUAL=25
    MAYORIGUAL=26
    Y=27
    O=28
    IGUAL=29
    SEMICOLON=30
    LBRACE=31
    RBRACE=32
    LBRACKET=33
    RBRACKET=34
    BOOLEAN=35
    ID=36
    STRING=37
    NUMERO=38
    FLOAT=39
    WS=40
    COMMENT_SINGLE=41
    COMMENT_MULTI=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class InicioContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(codeToPyParser.EOF, 0)

        def declaracionFuncion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(codeToPyParser.DeclaracionFuncionContext)
            else:
                return self.getTypedRuleContext(codeToPyParser.DeclaracionFuncionContext,i)


        def declaracionVariable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(codeToPyParser.DeclaracionVariableContext)
            else:
                return self.getTypedRuleContext(codeToPyParser.DeclaracionVariableContext,i)


        def llamadaFuncion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(codeToPyParser.LlamadaFuncionContext)
            else:
                return self.getTypedRuleContext(codeToPyParser.LlamadaFuncionContext,i)


        def ciclo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(codeToPyParser.CicloContext)
            else:
                return self.getTypedRuleContext(codeToPyParser.CicloContext,i)


        def condicion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(codeToPyParser.CondicionContext)
            else:
                return self.getTypedRuleContext(codeToPyParser.CondicionContext,i)


        def mostrar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(codeToPyParser.MostrarContext)
            else:
                return self.getTypedRuleContext(codeToPyParser.MostrarContext,i)


        def getRuleIndex(self):
            return codeToPyParser.RULE_inicio

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInicio" ):
                listener.enterInicio(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInicio" ):
                listener.exitInicio(self)




    def inicio(self):

        localctx = codeToPyParser.InicioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_inicio)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << codeToPyParser.HACER) | (1 << codeToPyParser.DEFINIR) | (1 << codeToPyParser.MOSTRAR) | (1 << codeToPyParser.SI) | (1 << codeToPyParser.REPETIR) | (1 << codeToPyParser.ID))) != 0):
                self.state = 52
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 46
                    self.declaracionFuncion()
                    pass

                elif la_ == 2:
                    self.state = 47
                    self.declaracionVariable()
                    pass

                elif la_ == 3:
                    self.state = 48
                    self.llamadaFuncion()
                    pass

                elif la_ == 4:
                    self.state = 49
                    self.ciclo()
                    pass

                elif la_ == 5:
                    self.state = 50
                    self.condicion()
                    pass

                elif la_ == 6:
                    self.state = 51
                    self.mostrar()
                    pass


                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 57
            self.match(codeToPyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclaracionFuncionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HACER(self):
            return self.getToken(codeToPyParser.HACER, 0)

        def ID(self):
            return self.getToken(codeToPyParser.ID, 0)

        def SEPARADOR(self, i:int=None):
            if i is None:
                return self.getTokens(codeToPyParser.SEPARADOR)
            else:
                return self.getToken(codeToPyParser.SEPARADOR, i)

        def bloque(self):
            return self.getTypedRuleContext(codeToPyParser.BloqueContext,0)


        def parametros(self):
            return self.getTypedRuleContext(codeToPyParser.ParametrosContext,0)


        def getRuleIndex(self):
            return codeToPyParser.RULE_declaracionFuncion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionFuncion" ):
                listener.enterDeclaracionFuncion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionFuncion" ):
                listener.exitDeclaracionFuncion(self)




    def declaracionFuncion(self):

        localctx = codeToPyParser.DeclaracionFuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracionFuncion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(codeToPyParser.HACER)
            self.state = 60
            self.match(codeToPyParser.ID)
            self.state = 61
            self.match(codeToPyParser.SEPARADOR)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==codeToPyParser.ID:
                self.state = 62
                self.parametros()
                self.state = 63
                self.match(codeToPyParser.SEPARADOR)


            self.state = 67
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParametrosContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(codeToPyParser.ID)
            else:
                return self.getToken(codeToPyParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(codeToPyParser.COMMA)
            else:
                return self.getToken(codeToPyParser.COMMA, i)

        def getRuleIndex(self):
            return codeToPyParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)




    def parametros(self):

        localctx = codeToPyParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(codeToPyParser.ID)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==codeToPyParser.COMMA:
                self.state = 70
                self.match(codeToPyParser.COMMA)
                self.state = 71
                self.match(codeToPyParser.ID)
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BloqueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(codeToPyParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(codeToPyParser.RBRACE, 0)

        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(codeToPyParser.InstruccionContext)
            else:
                return self.getTypedRuleContext(codeToPyParser.InstruccionContext,i)


        def getRuleIndex(self):
            return codeToPyParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)




    def bloque(self):

        localctx = codeToPyParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bloque)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(codeToPyParser.LBRACE)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << codeToPyParser.DEFINIR) | (1 << codeToPyParser.DEVOLVER) | (1 << codeToPyParser.MOSTRAR) | (1 << codeToPyParser.SI) | (1 << codeToPyParser.REPETIR) | (1 << codeToPyParser.ID))) != 0):
                self.state = 78
                self.instruccion()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self.match(codeToPyParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InstruccionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ciclo(self):
            return self.getTypedRuleContext(codeToPyParser.CicloContext,0)


        def condicion(self):
            return self.getTypedRuleContext(codeToPyParser.CondicionContext,0)


        def mostrar(self):
            return self.getTypedRuleContext(codeToPyParser.MostrarContext,0)


        def DEVOLVER(self):
            return self.getToken(codeToPyParser.DEVOLVER, 0)

        def expresion(self):
            return self.getTypedRuleContext(codeToPyParser.ExpresionContext,0)


        def SEMICOLON(self):
            return self.getToken(codeToPyParser.SEMICOLON, 0)

        def declaracionVariable(self):
            return self.getTypedRuleContext(codeToPyParser.DeclaracionVariableContext,0)


        def getRuleIndex(self):
            return codeToPyParser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)




    def instruccion(self):

        localctx = codeToPyParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_instruccion)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [codeToPyParser.REPETIR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.ciclo()
                pass
            elif token in [codeToPyParser.SI]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.condicion()
                pass
            elif token in [codeToPyParser.MOSTRAR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.mostrar()
                pass
            elif token in [codeToPyParser.DEVOLVER]:
                self.enterOuterAlt(localctx, 4)
                self.state = 89
                self.match(codeToPyParser.DEVOLVER)
                self.state = 90
                self.expresion()
                self.state = 91
                self.match(codeToPyParser.SEMICOLON)
                pass
            elif token in [codeToPyParser.DEFINIR, codeToPyParser.ID]:
                self.enterOuterAlt(localctx, 5)
                self.state = 93
                self.declaracionVariable()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CicloContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REPETIR(self):
            return self.getToken(codeToPyParser.REPETIR, 0)

        def VEZ(self):
            return self.getToken(codeToPyParser.VEZ, 0)

        def bloque(self):
            return self.getTypedRuleContext(codeToPyParser.BloqueContext,0)


        def ID(self):
            return self.getToken(codeToPyParser.ID, 0)

        def NUMERO(self):
            return self.getToken(codeToPyParser.NUMERO, 0)

        def expAritmetica(self):
            return self.getTypedRuleContext(codeToPyParser.ExpAritmeticaContext,0)


        def getRuleIndex(self):
            return codeToPyParser.RULE_ciclo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCiclo" ):
                listener.enterCiclo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCiclo" ):
                listener.exitCiclo(self)




    def ciclo(self):

        localctx = codeToPyParser.CicloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ciclo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(codeToPyParser.REPETIR)
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 97
                self.match(codeToPyParser.ID)
                pass

            elif la_ == 2:
                self.state = 98
                self.match(codeToPyParser.NUMERO)
                pass

            elif la_ == 3:
                self.state = 99
                self.expAritmetica()
                pass


            self.state = 102
            self.match(codeToPyParser.VEZ)
            self.state = 103
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MostrarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MOSTRAR(self):
            return self.getToken(codeToPyParser.MOSTRAR, 0)

        def SEMICOLON(self):
            return self.getToken(codeToPyParser.SEMICOLON, 0)

        def cadenaConcatenada(self):
            return self.getTypedRuleContext(codeToPyParser.CadenaConcatenadaContext,0)


        def ID(self):
            return self.getToken(codeToPyParser.ID, 0)

        def getRuleIndex(self):
            return codeToPyParser.RULE_mostrar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMostrar" ):
                listener.enterMostrar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMostrar" ):
                listener.exitMostrar(self)




    def mostrar(self):

        localctx = codeToPyParser.MostrarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mostrar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(codeToPyParser.MOSTRAR)
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 106
                self.cadenaConcatenada()
                pass

            elif la_ == 2:
                self.state = 107
                self.match(codeToPyParser.ID)
                pass


            self.state = 110
            self.match(codeToPyParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CadenaConcatenadaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(codeToPyParser.STRING)
            else:
                return self.getToken(codeToPyParser.STRING, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(codeToPyParser.ID)
            else:
                return self.getToken(codeToPyParser.ID, i)

        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(codeToPyParser.PLUS)
            else:
                return self.getToken(codeToPyParser.PLUS, i)

        def getRuleIndex(self):
            return codeToPyParser.RULE_cadenaConcatenada

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCadenaConcatenada" ):
                listener.enterCadenaConcatenada(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCadenaConcatenada" ):
                listener.exitCadenaConcatenada(self)




    def cadenaConcatenada(self):

        localctx = codeToPyParser.CadenaConcatenadaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_cadenaConcatenada)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            _la = self._input.LA(1)
            if not(_la==codeToPyParser.ID or _la==codeToPyParser.STRING):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==codeToPyParser.PLUS:
                self.state = 113
                self.match(codeToPyParser.PLUS)
                self.state = 114
                _la = self._input.LA(1)
                if not(_la==codeToPyParser.ID or _la==codeToPyParser.STRING):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CondicionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SI(self):
            return self.getToken(codeToPyParser.SI, 0)

        def LPAREN(self):
            return self.getToken(codeToPyParser.LPAREN, 0)

        def expresion(self):
            return self.getTypedRuleContext(codeToPyParser.ExpresionContext,0)


        def RPAREN(self):
            return self.getToken(codeToPyParser.RPAREN, 0)

        def bloque(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(codeToPyParser.BloqueContext)
            else:
                return self.getTypedRuleContext(codeToPyParser.BloqueContext,i)


        def SINO(self):
            return self.getToken(codeToPyParser.SINO, 0)

        def getRuleIndex(self):
            return codeToPyParser.RULE_condicion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicion" ):
                listener.enterCondicion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicion" ):
                listener.exitCondicion(self)




    def condicion(self):

        localctx = codeToPyParser.CondicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condicion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(codeToPyParser.SI)
            self.state = 121
            self.match(codeToPyParser.LPAREN)
            self.state = 122
            self.expresion()
            self.state = 123
            self.match(codeToPyParser.RPAREN)
            self.state = 124
            self.bloque()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==codeToPyParser.SINO:
                self.state = 125
                self.match(codeToPyParser.SINO)
                self.state = 126
                self.bloque()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclaracionVariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(codeToPyParser.ID, 0)

        def IGUAL(self):
            return self.getToken(codeToPyParser.IGUAL, 0)

        def SEMICOLON(self):
            return self.getToken(codeToPyParser.SEMICOLON, 0)

        def llamadaFuncion(self):
            return self.getTypedRuleContext(codeToPyParser.LlamadaFuncionContext,0)


        def STRING(self):
            return self.getToken(codeToPyParser.STRING, 0)

        def NUMERO(self):
            return self.getToken(codeToPyParser.NUMERO, 0)

        def FLOAT(self):
            return self.getToken(codeToPyParser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(codeToPyParser.BOOLEAN, 0)

        def lista(self):
            return self.getTypedRuleContext(codeToPyParser.ListaContext,0)


        def expresion(self):
            return self.getTypedRuleContext(codeToPyParser.ExpresionContext,0)


        def DEFINIR(self):
            return self.getToken(codeToPyParser.DEFINIR, 0)

        def getRuleIndex(self):
            return codeToPyParser.RULE_declaracionVariable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionVariable" ):
                listener.enterDeclaracionVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionVariable" ):
                listener.exitDeclaracionVariable(self)




    def declaracionVariable(self):

        localctx = codeToPyParser.DeclaracionVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_declaracionVariable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==codeToPyParser.DEFINIR:
                self.state = 129
                self.match(codeToPyParser.DEFINIR)


            self.state = 132
            self.match(codeToPyParser.ID)
            self.state = 133
            self.match(codeToPyParser.IGUAL)
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 134
                self.llamadaFuncion()
                pass

            elif la_ == 2:
                self.state = 135
                self.match(codeToPyParser.STRING)
                pass

            elif la_ == 3:
                self.state = 136
                self.match(codeToPyParser.NUMERO)
                pass

            elif la_ == 4:
                self.state = 137
                self.match(codeToPyParser.FLOAT)
                pass

            elif la_ == 5:
                self.state = 138
                self.match(codeToPyParser.BOOLEAN)
                pass

            elif la_ == 6:
                self.state = 139
                self.lista()
                pass

            elif la_ == 7:
                self.state = 140
                self.expresion()
                pass


            self.state = 143
            self.match(codeToPyParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AccesoIndiceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(codeToPyParser.ID, 0)

        def LBRACKET(self):
            return self.getToken(codeToPyParser.LBRACKET, 0)

        def expresion(self):
            return self.getTypedRuleContext(codeToPyParser.ExpresionContext,0)


        def RBRACKET(self):
            return self.getToken(codeToPyParser.RBRACKET, 0)

        def getRuleIndex(self):
            return codeToPyParser.RULE_accesoIndice

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccesoIndice" ):
                listener.enterAccesoIndice(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccesoIndice" ):
                listener.exitAccesoIndice(self)




    def accesoIndice(self):

        localctx = codeToPyParser.AccesoIndiceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_accesoIndice)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(codeToPyParser.ID)
            self.state = 146
            self.match(codeToPyParser.LBRACKET)
            self.state = 147
            self.expresion()
            self.state = 148
            self.match(codeToPyParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpresionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condicionLogica(self):
            return self.getTypedRuleContext(codeToPyParser.CondicionLogicaContext,0)


        def comparacion(self):
            return self.getTypedRuleContext(codeToPyParser.ComparacionContext,0)


        def expAritmetica(self):
            return self.getTypedRuleContext(codeToPyParser.ExpAritmeticaContext,0)


        def getRuleIndex(self):
            return codeToPyParser.RULE_expresion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion" ):
                listener.enterExpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion" ):
                listener.exitExpresion(self)




    def expresion(self):

        localctx = codeToPyParser.ExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expresion)
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.condicionLogica()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.comparacion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 152
                self.expAritmetica()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
